JSON Parsing from URL implemented .....Data handling Remaining

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -7,3 +7,5 @@ line_length: 200
 disabled_rules: # rule identifiers to exclude from running
   - colon
   - comma
+variable_name:
+     allowed_symbols: "_"
