--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -7,5 +7,13 @@ line_length: 200
 disabled_rules: # rule identifiers to exclude from running
   - colon
   - comma
+  - trailing_comma
+  - multiple_closures_with_trailing_closure
+  - xctfail_message
+  - legacy_random
+  - reduce_boolean
+  - for_where
+  - first_where
+  - is_disjoint
 variable_name:
      allowed_symbols: "_"
